valwebapp/base/k8s-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: k8s-app
  name: k8s-app
  namespace: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-app
  strategy: {}
  template:
    metadata:
      labels:
        app: k8s-app
    spec:
      containers:
      - image: val717/k8s-app:1.0
        name: k8s-app
        resources: {}
