valwebapp/base/k8s-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: k8s-app
  name: k8s-app
  namespace: webapp
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30088
  selector:
    app: k8s-app
