valwebapp/base/k8s-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: webapp
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.valservers.uk
    http:
      paths:
      - path: /
        pathType: Prefix      
        backend:
          service:
            name: k8s-app
            port:
              number: 80
